tests/fixtures/invalid/pow_set_none_dict.py
# Cannot call pow() with Set[int], None, Dict[str, int]
x = pow({1, 2, 3}, None, {"a": 1})
